# py_template

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  code-quality.yml  release.yml  security.yml
docs/: TEMPLATE_USAGE.md  api.md  deployment.md  development.md  docker.md  project-standards.md  release.md  workflows.md
scripts/: setup.sh
src/py_template/: __init__.py  __version__.py
src/py_template/cli/: __init__.py  commands.py
src/py_template/core/: __init__.py  exceptions.py  models.py
src/py_template/services/: __init__.py  base.py
src/py_template/utils/: __init__.py  helpers.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_cli.py  test_demo.py  test_exceptions.py  test_services.py
