[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py_template"
description = "A minimal Python project template with modern tooling"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dynamic = ["version"]
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["template", "python", "project-template", "boilerplate"]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.12",
	"Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
	"pydantic>=2.11.5",
	"click>=8.1.0", # CLI 框架
]

[project.optional-dependencies]
test = ["pytest>=8.4.1", "pytest-cov>=6.0.0", "coverage>=7.6.9"]
dev = [
	"pytest>=8.4.1",
	"pytest-cov>=6.0.0",
	"coverage>=7.6.9",
	"pre-commit>=4.0.1",
	"ruff>=0.13.2",
]

[project.scripts]
py_template = "py_template.cli.commands:main"

[tool.hatch.version]
path = "src/py_template/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/py_template"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --showlocals --durations=10"
log_cli = true
log_cli_level = "DEBUG"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
	"pragma: no cover",
	"def __repr__",
	"raise NotImplementedError",
	"if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
exclude = [".git", ".venv", "build", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM", "PIE", "RET", "ARG", "PTH"]
fixable = ["ALL"]
ignore = ["E501", "B008", "ARG001", "ARG002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
